--- a/src/components/AddSet/AddSet.module.scss
+++ b/src/components/AddSet/AddSet.module.scss
@@ -34,6 +34,7 @@
       display: flex;
       align-items: center;
       color: var(--color-primary);
+      font-size: 2.7rem;
     }
   }
   &__weight {
