--- a/src/components/WorkoutItem/WorkoutItem.module.scss
+++ b/src/components/WorkoutItem/WorkoutItem.module.scss
@@ -1,4 +1,4 @@
-.workout {
+.workout-item {
   background-color: var(--color-gray);
   padding: 2rem 4rem;
   border-radius: 2rem;
@@ -7,6 +7,10 @@
 
   & > * {
     margin-bottom: 2.5rem;
+  }
+
+  &--special-set {
+    padding: 8rem 4rem 2rem 4rem;
   }
 
   &__header {
@@ -23,6 +27,8 @@
     h4 {
       font-size: 5rem;
       text-transform: uppercase;
+      cursor: pointer;
+      display: inline-block;
     }
   }
   &__footer {
