--- a/src/core-ui/ModalSecondary/ModalSecondary.module.scss
+++ b/src/core-ui/ModalSecondary/ModalSecondary.module.scss
@@ -13,10 +13,16 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 90rem;
-  max-width: 90rem;
-  min-height: 40rem;
+  min-width: 60rem;
+  max-width: 60rem;
+  min-height: 25rem;
   background-color: var(--color-white);
   border-radius: 0.3rem;
+  border-bottom: 0.5rem solid var(--color-primary);
   z-index: 9999;
+  overflow: hidden;
+  &--read {
+    height: 45rem;
+    overflow: auto;
+  }
 }
