--- a/src/core-ui/WorkoutBadge/WorkoutBadge.module.scss
+++ b/src/core-ui/WorkoutBadge/WorkoutBadge.module.scss
@@ -1,6 +1,23 @@
 .badge {
   width: 1.4rem;
   height: 1.4rem;
+  &--white {
+    path {
+      fill: white !important;
+    }
+  }
+  &--xs {
+    width: 1rem;
+    height: 1rem;
+  }
+  &--md {
+    width: 2rem;
+    height: 2rem;
+  }
+  &--lg {
+    width: 3rem;
+    height: 3rem;
+  }
   &--up {
     path {
       fill: green;
