--- a/src/components/WorkoutItem/WorkoutItem.module.scss
+++ b/src/components/WorkoutItem/WorkoutItem.module.scss
@@ -49,8 +49,8 @@
   &__actions {
     position: absolute;
     top: 0;
-    right: 5rem;
-    width: 10%;
+    right: 0rem;
+    width: 20%;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -65,6 +65,13 @@
       height: 100%;
       display: flex;
       align-items: center;
+      button {
+        height: 100%;
+        width: 100%;
+        background: none;
+        border: none;
+        cursor: pointer;
+      }
     }
     &--edit {
     }
