--- a/src/index.scss
+++ b/src/index.scss
@@ -368,3 +368,29 @@ hr {
     }
   }
 }
+
+.addworkout-checkbox-hack {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+.input-error {
+  // border-bottom: 1px solid #ff7b7b;
+  // background: #ffe9e9;
+  border-bottom: 1px solid var(--color-danger);
+  background: var(--color-danger-light);
+}
+
+.targeted-muscle--input-error::before {
+  background-color: var(--color-danger) !important;
+}
+
+.error-message {
+  margin-top: 1rem;
+  color: var(--color-danger);
+  font-size: 1.3rem;
+}
