--- a/src/components/TargetedMuscles/TargetedMuscle/TargetedMuscle.module.scss
+++ b/src/components/TargetedMuscles/TargetedMuscle/TargetedMuscle.module.scss
@@ -11,6 +11,9 @@
 
   &:not(:last-child) {
     margin-right: 2rem;
+    @media (max-width: 900px) {
+      margin-right: 0;
+    }
   }
 
   &::before {
@@ -33,7 +36,7 @@
     top: 0;
     left: 0;
     opacity: 0;
-    z-index: 3
+    z-index: 3;
   }
 
   &--active {
