--- a/src/components/TargetedMuscles/TargetedMuscles.module.scss
+++ b/src/components/TargetedMuscles/TargetedMuscles.module.scss
@@ -1,5 +1,10 @@
 .targeted-muscles {
   display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
   margin-block: 1rem;
   font-size: 2rem;
+  @media (max-width: 900px) {
+    font-size: 1.5rem;
+  }
 }
