--- a/src/core-ui/Modal/Modal.scss
+++ b/src/core-ui/Modal/Modal.scss
@@ -19,6 +19,9 @@
   background-color: var(--color-white);
   border-radius: 0.3rem;
   z-index: 999;
+  @media (max-width: 700px) {
+    min-width: auto;
+  }
   &--read {
     overflow: auto;
   }
