--- a/src/components/Program/Program.module.scss
+++ b/src/components/Program/Program.module.scss
@@ -1,6 +1,8 @@
 .program {
   font-size: 3rem;
   position: relative;
+  background: #4778e0;
+  border-radius: 2rem;
   //   height: 40rem;
 
   &:first-child {
