--- a/src/core-ui/ModalSecondary/ModalSecondary.module.scss
+++ b/src/core-ui/ModalSecondary/ModalSecondary.module.scss
@@ -21,6 +21,9 @@
   border-bottom: 0.5rem solid var(--color-primary);
   z-index: 9999;
   overflow: hidden;
+  @media (max-width: 700px) {
+    min-width: auto;
+  }
   &--read {
     height: 45rem;
     overflow: auto;
