--- a/src/index.scss
+++ b/src/index.scss
@@ -148,6 +148,9 @@ a {
   display: flex;
   align-items: center;
   gap: 2rem;
+  @media (max-width: 700px) {
+    justify-content: space-between;
+  }
 }
 
 .form-control {
