--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './styles/Mixins.scss';
+
 :root {
   --color-primary: #3210e0;
   --color-gray: #eaebed;
@@ -23,8 +25,17 @@
 html {
   font-size: 62.5%;
 
-  @media (max-width: 600px) {
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+  @include respond(tab-port) {
     font-size: 50%;
+  }
+  @include respond(phone) {
+    font-size: 37.5%;
+  }
+  @include respond(big-desktop) {
+    font-size: 75%;
   }
 }
 
