--- a/src/components/AddWorkout/AddWorkout.scss
+++ b/src/components/AddWorkout/AddWorkout.scss
@@ -19,6 +19,7 @@
     @media (max-width: 900px) {
       flex-direction: column;
       gap: 5rem;
+      height: auto
     }
 
     &.sets-animation-active {
