--- a/src/core-ui/ModalSecondary/ModalSecondary.module.scss
+++ b/src/core-ui/ModalSecondary/ModalSecondary.module.scss
@@ -22,7 +22,7 @@
   z-index: 9999;
   overflow: hidden;
   @media (max-width: 700px) {
-    min-width: auto;
+    min-width: 90%;
   }
   &--read {
     height: 45rem;
