--- a/src/core-ui/Modal/Modal.scss
+++ b/src/core-ui/Modal/Modal.scss
@@ -20,7 +20,7 @@
   border-radius: 0.3rem;
   z-index: 999;
   @media (max-width: 700px) {
-    min-width: auto;
+    min-width: 90%;
   }
   &--read {
     overflow: auto;
