--- a/src/core-ui/FloatingCTA/FloatingCTA.module.scss
+++ b/src/core-ui/FloatingCTA/FloatingCTA.module.scss
@@ -8,7 +8,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
+  border-radius: 50%;    
+  z-index: 999999;
   cursor: pointer;
   svg {
     width: 3rem;
